# algohive/backend/docs/swagger.json
@@ -1739,6 +1739,18 @@
                 "email": {
                     "type": "string"
                 },
+                "firstname": {
+                    "type": "string"
+                },
+                "last_connected": {
+                    "type": "string"
+                },
+                "lastname": {
+                    "type": "string"
+                },
+                "permissions": {
+                    "type": "integer"
+                },
                 "token": {
                     "type": "string"
                 },
